syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.connector";
option java_outer_classname = "ConnectorProto";

package connector;

service Command {
    // Sends a greeting
    rpc SendCommand (CommandMessage) returns (CommandMessageAck) {}
    rpc ReceiveCommandReply (CommandMessageReply) returns (CommandMessageAck) {}
    rpc ReceiveCommand (CommandMessage) returns (CommandMessageAck) {}
  }

message CommandMessage {
  string name = 1;
}

message CommandMessageReply {
  string message = 1;
}

message CommandMessageAck {
    string message = 1;
  }