syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ditrit.gandalf.java.grpc";
option java_outer_classname = "ConnectorProto";

package grpc;


service Connector {
    rpc SendCommandList (CommandList) returns (Empty) {}
}

message CommandList {
    int64 Major = 1;                 
    repeated string Commands = 2;
}

message Empty {

}

message IteratorMessage {
    string Id = 1;    
}

